# chronicler

./: .gitignore  README.md  data.json  model.py  pyproject.toml  runtime.txt
chronicler/: __main__.py  app.py  core.py  lms.py  models.py
static/: style.css
templates/: about.html  base.html  error.html  fc.html  footer.html  index.html  nav.html  report.html
